--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
+  "include": ["src", "utils"],
   "baseUrl": ".",
     "paths": {
       "@/*": [
