--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
